output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_344.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_344.py", line 83
    /* else: */ durations[3])))
    ^
SyntaxError: invalid syntax
